examples/invalid/syntaxErr/while/donoErr.wacc
# done typo
# Output:
# #syntax error#

#Program:#

begin
  while false do
    skip
  dono
end
